Added variable products

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,247 +1,247 @@
 {
-    "HOME": "Home",
-    "WISHLIST": "Wishlist",
-    "CART": "Cart",
-    "ORDERS": "Orders",
-    "ACCOUNT": "Account",
-    "NEW_PASSWORD": "Your password has change Successfully",
-    "ERROR_PASSWORD": "Your Password Could not be changed",
-    "CATEGORIES": "Categories",
-    "NO_PRODUCTS": "Products Not Available.",
-    "ALL_CATEGORIES": "All Categories",
-    "ALL_CATEGORIES_DESC": "Please select a category",
-    "VIEW_ALL": "View All",
-    "DELETE": "Delete",
-    "LANGUAGE": "Language",
-    "LANGUAGE_CHANGED": "Language Changed",
-    "PRICE": "Price",
-    "DETAILS": "Details",
-    "SUBTOTAL": "Subtotal",
-    "TOTAL": "Total",
-    "TAX": "Tax",
-    "SHIPPING_FEE": "Shipping charges",
-    "ENTER_COUPON_CODE": "Apply Promo Code/Voucher",
-    "COUPON_CODE": "Coupon Code",
-    "COUPON": "Coupon",
-    "CHECKOUT": "Checkout",
-    "SAVE": "Save",
-    "CALCULATE_SHIPPING": "Calculate Shipping",
-    "BUY_EXTERNAL_PRODUCT": "Buy External Product",
-    "LOADING": "Loading..",
-    "CANCEL": "Cancel",
-    "OK": "Ok",
-    "YES": "Yes",
-    "NO": "No",
-    "SELECT": "Select",
-    "REMOVE_FROM_WISHLIST": "Remove from wishlist",
-    "REMOVE_FROM_CART": "Remove from Cart",
-    "REMOVE_FROM_COUPON": "Remove from Coupon",
-    "ARE_YOU_SURE": "Are you sure to remove this?",
-    "SIGN_IN": "Sign in",
-    "LOGIN_FIRST": "You need to login/register first.",
-    "CHANGE_YOUR_PASSWORD": "Change your password",
-    "SIGN_OUT": "Sign out",
-    "FAQ": "FAQ",
-    "CONTACT": "Contact Us",
-    "GIVE_FEEDBACK": "Give Feedback",
-    "CREATE_ACCOUNT": "Create Account",
-    "USERNAME": "Username",
-    "FORGOT": "Forgot Password?",
-    "DONT_HAVE_ACCOUNT": "Don't have an account?",
-    "FORGOT_DESC": "It's Okay, it can happen to anyone. Enter your email and We'll send you a reset password link.",
-    "RESET_PASS": "Reset Password",
-    "GO_BACK": "Go Back",
-    "HAVE_AN_ACCOUNT": "Already have an account?",
-    "SIGN_UP": "Sign up",
-    "LOGIN/REGISTER": "Login | Register",
-    "LOGIN_DESC2": "Login to manage your account",
-    "REGISTER_SUCCESS": "Hi, your registration was successfull \n Try Login Now",
-    "LOGIN_SUCCESS": "Welcome {{value}}, happy shopping",
-    "LOGIN_FAILED": "Incorrect username/password",
-    "REGISTER_FAILED": "Registration Failed",
-    "RESET_PASSWORD": "Your password reset link has been sent to your Email.",
-    "WRONG_EMAIL": "Your entered Email is Wrong",
-    "FILL_REQUIRED_FIELD": "Please fill required fields",
-    "PASSWORD_NOT_MATCH": "Password does not match",
-    "OR": "Or",
-    "COUNTRY": "Country",
-    "STATE": "State / County / Province",
-    "CITY": "City",
-    "POSTCODE": "Postcode",
-    "FIRST_NAME": "First name",
-    "LAST_NAME": "Last name",
-    "NAME": "Name",
-    "EMAIL": "Email",
-    "COMPANY": "Company",
-    "PHONE_NUMBER": "Phone Number",
-    "ADDRESS_1": "Address Line 1",
-    "ADDRESS_2": "Address Line 2",
-    "PROFILE_UPDATED": "Profile updated",
-    "SETTING": "Setting",
-    "ADDRESS": "Address",
-    "BILLING": "Billing",
-    "SHIPPING": "Shipping",
-    "NO_ADDRESS_SAVED": "You have not saved any address yet.",
-    "ADDRESS_USE": "Address will be used on the checkout page by default.",
-    "TOS": "Terms of Service",
-    "APP": "App",
-    "VERSION": "Version",
-    "PASSWORD": "Password",
-    "CHANGE_PASSWORD": "Change Password",
-    "CONFIRM_PASSWORD": "Confirm Password",
-    "NEW": "New",
-    "OLD": "Old",
-    "FILE_NAME": "File Name",
-    "EXPIRES": "Expires",
-    "DOWNLOAD": "Downloads",
-    "DOWNLOAD_SUCCESS": "Download Succeeded!",
-    "DOWNLOAD_FAILED": "Download Failed!",
-    "ERROR": "Something went wrong! Try again Later",
-    "SELECT_COUNTRY": "Select Country",
-    "SELCT_COUNTRY_DESC": "Please select your country",
-    "SELECT_STATE": "Select State",
-    "SELCT_STATE_DESC": "Please select your state",
-    "MANAGE_ADDRESS": "Manage your address",
-    "ONLY_DEVICE": "Device Only",
-    "ONLY_DEVICE_DESC": "This feature only works on your real device or emulator.",
-    "REVIEW": "Review",
-    "NEXT": "Next",
-    "PREVIOUS": "Previous",
-    "PAID": "Paid",
-    "UNPAID": "Unpaid",
-    "NO_ORDER": "No order",
-    "NO_WISHLIST": "No Wishlist.",
-    "CART_EMPTY": "Cart is empty.",
-    "START_SHOPPING": "Start shopping",
-    "PAYMENT": "Payment",
-    "PRODUCTS": "Products",
-    "SORT": "Sort by",
-    "FILTER_DESC": "Select {{value}} to filter",
-    "POPULARITY": "Popularity",
-    "AVERAGE_RATING": "Average rating",
-    "NEWNESS": "What's new",
-    "PRICE_ASC": "Price: Low to High",
-    "PRICE_DESC": "Price: High to Low",
-    "QUANTITY": "Quantity",
-    "VARIATION": "Variation",
-    "GROUPED_PRODUCTS": "Grouped Products",
-    "DESCRIPTION": "Description",
-    "SELECT_OPTIONS": "Select Options",
-    "SPECIFICATION": "Specification",
-    "UPSELL": "Products You May also like",
-    "RELATED": "Related Products",
-    "ADD_TO_CART": "Add to cart",
-    "ADDED_TO_CART": "Added to cart",
-    "BUY_NOW": "Buy Now",
-    "OUT_OF_STOCK": "Out of Stock",
-    "NO_MORE_ADD": "No more item can be added",
-    "HISTORY": "History",
-    "CLEAR": "Clear",
-    "HISTORY_TITLE": "History Clear",
-    "HISTORY_DESC": "Are you sure to clear this?",
-    "SEARCH": "Search",
-    "INVALID_COUPON": "Coupon code is not valid.",
-    "FIND_DELIVERY_DETAILS": "Find the delivery details",
-    "ENTER_POSTCODE": "Enter Postcode",
-    "ORDER_SUMMARY": "Order Summary",
-    "WALLET": "Wallet",
-    "DELIVERY_OPTIONS": "Delivery Options",
-    "SHOP": "Shop",
-    "SHOP_BY_CATEGORY": "Shop by category",
-    "CONTINUE_BROWSING": "Countinue Browsing",
-    "GO_TO_HOME": "Go to home",
-    "GO_TO_CART": "Go to cart",
-    "ADD_TO_WISHLIST": "Add to wishlist",
-    "ADDED_TO_WISHLIST": "Added to wishlist",
-    "FILTER": "Filter",
-    "RESET_ALL": "Reset All",
-    "SHOW_RESULTS": "Show Results",
-    "COD_CHARGES": "COD Charges",
-    "FEATURED": "Featured",
-    "TOP_SELLERS": "Top Sellers",
-    "TRENDING_OFFERS": "Trending Offers",
-    "TOP_RATED": "Top Rated",
-    "INFORMATION": "information",
-    "PASSWORD_INFO": "leave blank to leave unchanged",
-    "DONE": "Done",
-    "APPLY_COUPON": "Apply Coupon",
-    "APPLY": "Apply",
-    "USE_CODE": "Use Code",
-    "VALID_TILL": "Valid Till",
-    "APPLIED": "applied",
-    "SHIPPING_METHODS": "Shipping Method(s)",
-    "SAME_FOR_SHIPPING": "Same For Shipping",
-    "APPLIED_COUPONS": "Applied Coupons",
-    "TOTAL_DISCOUNT": "Total Discount",
-    "PAYMENT_METHODS": "Payment Method",
-    "PLACE_ORDER": "Place Order",
-    "WELCOME_TO_WOOAPP": "Welcome to {{value}}",
-    "FASHION_INFO": "Be in sync with latest in fashion",
-    "FACEBOOK": "Facebook",
-    "GOOGLE": "Google",
-    "LOGIN_METHODS": "Or login via e-mail.",
-    "LOGIN_METHOD": "You're just one step away from signing up.",
-    "SIGNIN_POLICY": "By Signing up you will agree to our",
-    "PRIVACY_POLICY": "Privacy Policy",
-    "AND": "and",
-    "TERMS": "Terms",
-    "NOTIFICATIONS": "Notifications",
-    "NO_NOTIFY": "No notifications",
-    "REMOVE": "Remove",
-    "ORDER_DETAILS": "Order Details",
-    "CUSTOMER_DETAILS": "Customer details",
-    "CONTINUE_SHOPPING": "Continue Shopping",
-    "PROCEED_TO_PAYMENT": "Proceed to Payment",
-    "NO_OF_ITEMS": "No. of items:",
-    "ORDER_DATE": "Order Date",
-    "BUYER": "Buyer",
-    "ORDER_ID": "Order id:",
-    "DATE": "Date",
-    "STATUS": "Status",
-    "TOTAL_AMOUNT": "Total Amount",
-    "MIN_PRICE": "Minimum Price",
-    "MAX_PRICE": "Maximum Price",
-    "SEE_ALL_REVIEWS": "See All Reviews",
-    "YOUR_REFERRAL_CODE": "Your Referral Code",
-    "INVITE_FRIENDS": "Invite Friends",
-    "ADD_MONEY": "Add Money",
-    "REFER_AND_EARN": " Refer & Earn",
-    "MAX_ITEM": "Maximum Item quantity reached",
-    "MIN_ITEM": "Minimum Item quantity reached ",
-    "DELIVERY_NOT_AVAILABLE": "Delivery Not available",
-    "SELECT_PAYMENT_GATEWAY": "Please select a payment gateway",
-    "VALID_VARIATION": "Select a valid variation",
-    "PINCODE": "Please select a pincode first",
-    "NO_DELIVERY": "Delivery is not available for your location",
-    "SELECT_ONE_PRODUCT": "Select atleast one product",
-    "SELECT_PRODUCT_QUANTITY": "Select product quantity",
-    "SHARED": "Successfully shared",
-    "HISTORY_CLEARED": "History Cleared",
-    "ORDER_RECEIVED": "Order Received",
-    "CHAT_SUPPORT": "Chat Support",
-    "CATEGORY": "Category",
-    "TOTAL_SALES": "Total Sales",
-    "SKU": "SKU",
-    "STOCK": "Stock",
-    "WEIGHT": "Weight",
-    "ADDRESS_INFORMATION": "Address Information",
-    "ITEM": "item",
-    "FB_EMAIL_REQUIRED": "Your facebook id does have public email address. In order to continue login with facebook you need to add email on your facebook id.",
-    "ORDER_CREATED_THANKYOU_MESSAGE": "Thankyou for placing your order",
-    "CONFIRM": "Confirm",
-    "EXIT_MSG": "Do you want to exit?",
-    "EXIT": "Exit",
-    "SEARCH_MORE": "Search More for ",
-    "PAYMENT_LOADING": "Please Wait While we are redirecting to payment gateway.",
-    "ORDER_FAILED": "Order Failed",
-    "REFERRAL_CODE": "Referral code",
-    "HAVE_REFERRAL_CODE": "Have a referral code?",
-    "REFERRAL_CODE_DESC": "Enter a referral cde which you got from your friend. Refferal code is case-sensitive.",
-    "SKIP": "Skip",
-    "ADD_MONEY_TO_WALLET": "Add money to wallet",
-    "AMOUNT": "Amount",
-    "REFER_EARN_DESC": "Invite your friends on {{ storeName }} and get {{amount_referrer}} as wallet credit. Your friend Will also get {{amount_earner}} as wallet credit.",
-    "TOTAL_SALE_SAVING": "You save",
-    "SEE_MORE": "See More",
-    "CALL": "CALL"
+  "HOME": "Home",
+  "WISHLIST": "Wishlist",
+  "CART": "Cart",
+  "ORDERS": "Orders",
+  "ACCOUNT": "Account",
+  "NEW_PASSWORD": "Your password has change Successfully",
+  "ERROR_PASSWORD": "Your Password Could not be changed",
+  "CATEGORIES": "Categories",
+  "NO_PRODUCTS": "Products Not Available.",
+  "ALL_CATEGORIES": "All Categories",
+  "ALL_CATEGORIES_DESC": "Please select a category",
+  "VIEW_ALL": "View All",
+  "DELETE": "Delete",
+  "LANGUAGE": "Language",
+  "LANGUAGE_CHANGED": "Language Changed",
+  "PRICE": "Price",
+  "DETAILS": "Details",
+  "SUBTOTAL": "Subtotal",
+  "TOTAL": "Total",
+  "TAX": "Tax",
+  "SHIPPING_FEE": "Shipping charges",
+  "ENTER_COUPON_CODE": "Apply Promo Code/Voucher",
+  "COUPON_CODE": "Coupon Code",
+  "COUPON": "Coupon",
+  "CHECKOUT": "Checkout",
+  "SAVE": "Save",
+  "CALCULATE_SHIPPING": "Calculate Shipping",
+  "BUY_EXTERNAL_PRODUCT": "Buy External Product",
+  "LOADING": "Loading..",
+  "CANCEL": "Cancel",
+  "OK": "Ok",
+  "YES": "Yes",
+  "NO": "No",
+  "SELECT": "Select",
+  "REMOVE_FROM_WISHLIST": "Remove from wishlist",
+  "REMOVE_FROM_CART": "Remove from Cart",
+  "REMOVE_FROM_COUPON": "Remove from Coupon",
+  "ARE_YOU_SURE": "Are you sure to remove this?",
+  "SIGN_IN": "Sign in",
+  "LOGIN_FIRST": "You need to login/register first.",
+  "CHANGE_YOUR_PASSWORD": "Change your password",
+  "SIGN_OUT": "Sign out",
+  "FAQ": "FAQ",
+  "CONTACT": "Contact Us",
+  "GIVE_FEEDBACK": "Give Feedback",
+  "CREATE_ACCOUNT": "Create Account",
+  "USERNAME": "Username",
+  "FORGOT": "Forgot Password?",
+  "DONT_HAVE_ACCOUNT": "Don't have an account?",
+  "FORGOT_DESC": "It's Okay, it can happen to anyone. Enter your email and We'll send you a reset password link.",
+  "RESET_PASS": "Reset Password",
+  "GO_BACK": "Go Back",
+  "HAVE_AN_ACCOUNT": "Already have an account?",
+  "SIGN_UP": "Sign up",
+  "LOGIN/REGISTER": "Login | Register",
+  "LOGIN_DESC2": "Login to manage your account",
+  "REGISTER_SUCCESS": "Hi, your registration was successfull \n Try Login Now",
+  "LOGIN_SUCCESS": "Welcome {{value}}, happy shopping",
+  "LOGIN_FAILED": "Incorrect username/password",
+  "REGISTER_FAILED": "Registration Failed",
+  "RESET_PASSWORD": "Your password reset link has been sent to your Email.",
+  "WRONG_EMAIL": "Your entered Email is Wrong",
+  "FILL_REQUIRED_FIELD": "Please fill required fields",
+  "PASSWORD_NOT_MATCH": "Password does not match",
+  "OR": "Or",
+  "COUNTRY": "Country",
+  "STATE": "State / County / Province",
+  "CITY": "City",
+  "POSTCODE": "Postcode",
+  "FIRST_NAME": "First name",
+  "LAST_NAME": "Last name",
+  "NAME": "Name",
+  "EMAIL": "Email",
+  "COMPANY": "Company",
+  "PHONE_NUMBER": "Phone Number",
+  "ADDRESS_1": "Address Line 1",
+  "ADDRESS_2": "Address Line 2",
+  "PROFILE_UPDATED": "Profile updated",
+  "SETTING": "Setting",
+  "ADDRESS": "Address",
+  "BILLING": "Billing",
+  "SHIPPING": "Shipping",
+  "NO_ADDRESS_SAVED": "You have not saved any address yet.",
+  "ADDRESS_USE": "Address will be used on the checkout page by default.",
+  "TOS": "Terms of Service",
+  "APP": "App",
+  "VERSION": "Version",
+  "PASSWORD": "Password",
+  "CHANGE_PASSWORD": "Change Password",
+  "CONFIRM_PASSWORD": "Confirm Password",
+  "NEW": "New",
+  "OLD": "Old",
+  "FILE_NAME": "File Name",
+  "EXPIRES": "Expires",
+  "DOWNLOAD": "Downloads",
+  "DOWNLOAD_SUCCESS": "Download Succeeded!",
+  "DOWNLOAD_FAILED": "Download Failed!",
+  "ERROR": "Something went wrong! Try again Later",
+  "SELECT_COUNTRY": "Select Country",
+  "SELCT_COUNTRY_DESC": "Please select your country",
+  "SELECT_STATE": "Select State",
+  "SELCT_STATE_DESC": "Please select your state",
+  "MANAGE_ADDRESS": "Manage your address",
+  "ONLY_DEVICE": "Device Only",
+  "ONLY_DEVICE_DESC": "This feature only works on your real device or emulator.",
+  "REVIEW": "Review",
+  "NEXT": "Next",
+  "PREVIOUS": "Previous",
+  "PAID": "Paid",
+  "UNPAID": "Unpaid",
+  "NO_ORDER": "No order",
+  "NO_WISHLIST": "No Wishlist.",
+  "CART_EMPTY": "Cart is empty.",
+  "START_SHOPPING": "Start shopping",
+  "PAYMENT": "Payment",
+  "PRODUCTS": "Products",
+  "SORT": "Sort by",
+  "FILTER_DESC": "Select {{value}} to filter",
+  "POPULARITY": "Popularity",
+  "AVERAGE_RATING": "Average rating",
+  "NEWNESS": "What's new",
+  "PRICE_ASC": "Price: Low to High",
+  "PRICE_DESC": "Price: High to Low",
+  "QUANTITY": "Quantity",
+  "VARIATION": "Variation",
+  "GROUPED_PRODUCTS": "Grouped Products",
+  "DESCRIPTION": "Description",
+  "SELECT_OPTIONS": "Select Options",
+  "SPECIFICATION": "Specification",
+  "UPSELL": "Products You May also like",
+  "RELATED": "Related Products",
+  "ADD_TO_CART": "Add to cart",
+  "ADDED_TO_CART": "Added to cart",
+  "BUY_NOW": "Buy Now",
+  "OUT_OF_STOCK": "Out of Stock",
+  "NO_MORE_ADD": "More items cannot be added",
+  "HISTORY": "History",
+  "CLEAR": "Clear",
+  "HISTORY_TITLE": "History Clear",
+  "HISTORY_DESC": "Are you sure to clear this?",
+  "SEARCH": "Search",
+  "INVALID_COUPON": "Coupon code is not valid.",
+  "FIND_DELIVERY_DETAILS": "Find the delivery details",
+  "ENTER_POSTCODE": "Enter Postcode",
+  "ORDER_SUMMARY": "Order Summary",
+  "WALLET": "Wallet",
+  "DELIVERY_OPTIONS": "Delivery Options",
+  "SHOP": "Shop",
+  "SHOP_BY_CATEGORY": "Shop by category",
+  "CONTINUE_BROWSING": "Countinue Browsing",
+  "GO_TO_HOME": "Go to home",
+  "GO_TO_CART": "Go to cart",
+  "ADD_TO_WISHLIST": "Add to wishlist",
+  "ADDED_TO_WISHLIST": "Added to wishlist",
+  "FILTER": "Filter",
+  "RESET_ALL": "Reset All",
+  "SHOW_RESULTS": "Show Results",
+  "COD_CHARGES": "COD Charges",
+  "FEATURED": "Featured",
+  "TOP_SELLERS": "Top Sellers",
+  "TRENDING_OFFERS": "Trending Offers",
+  "TOP_RATED": "Top Rated",
+  "INFORMATION": "information",
+  "PASSWORD_INFO": "leave blank to leave unchanged",
+  "DONE": "Done",
+  "APPLY_COUPON": "Apply Coupon",
+  "APPLY": "Apply",
+  "USE_CODE": "Use Code",
+  "VALID_TILL": "Valid Till",
+  "APPLIED": "applied",
+  "SHIPPING_METHODS": "Shipping Method(s)",
+  "SAME_FOR_SHIPPING": "Same For Shipping",
+  "APPLIED_COUPONS": "Applied Coupons",
+  "TOTAL_DISCOUNT": "Total Discount",
+  "PAYMENT_METHODS": "Payment Method",
+  "PLACE_ORDER": "Place Order",
+  "WELCOME_TO_WOOAPP": "Welcome to {{value}}",
+  "FASHION_INFO": "Be in sync with latest in fashion",
+  "FACEBOOK": "Facebook",
+  "GOOGLE": "Google",
+  "LOGIN_METHODS": "Or login via e-mail.",
+  "LOGIN_METHOD": "You're just one step away from signing up.",
+  "SIGNIN_POLICY": "By Signing up you will agree to our",
+  "PRIVACY_POLICY": "Privacy Policy",
+  "AND": "and",
+  "TERMS": "Terms",
+  "NOTIFICATIONS": "Notifications",
+  "NO_NOTIFY": "No notifications",
+  "REMOVE": "Remove",
+  "ORDER_DETAILS": "Order Details",
+  "CUSTOMER_DETAILS": "Customer details",
+  "CONTINUE_SHOPPING": "Continue Shopping",
+  "PROCEED_TO_PAYMENT": "Proceed to Payment",
+  "NO_OF_ITEMS": "No. of items:",
+  "ORDER_DATE": "Order Date",
+  "BUYER": "Buyer",
+  "ORDER_ID": "Order id:",
+  "DATE": "Date",
+  "STATUS": "Status",
+  "TOTAL_AMOUNT": "Total Amount",
+  "MIN_PRICE": "Minimum Price",
+  "MAX_PRICE": "Maximum Price",
+  "SEE_ALL_REVIEWS": "See All Reviews",
+  "YOUR_REFERRAL_CODE": "Your Referral Code",
+  "INVITE_FRIENDS": "Invite Friends",
+  "ADD_MONEY": "Add Money",
+  "REFER_AND_EARN": " Refer & Earn",
+  "MAX_ITEM": "Maximum Item quantity reached",
+  "MIN_ITEM": "Minimum Item quantity reached ",
+  "DELIVERY_NOT_AVAILABLE": "Delivery Not available",
+  "SELECT_PAYMENT_GATEWAY": "Please select a payment gateway",
+  "VALID_VARIATION": "Select a variation first",
+  "PINCODE": "Please select a pincode first",
+  "NO_DELIVERY": "Delivery is not available for your location",
+  "SELECT_ONE_PRODUCT": "Select atleast one product",
+  "SELECT_PRODUCT_QUANTITY": "Select product quantity",
+  "SHARED": "Successfully shared",
+  "HISTORY_CLEARED": "History Cleared",
+  "ORDER_RECEIVED": "Order Received",
+  "CHAT_SUPPORT": "Chat Support",
+  "CATEGORY": "Category",
+  "TOTAL_SALES": "Total Sales",
+  "SKU": "SKU",
+  "STOCK": "Stock",
+  "WEIGHT": "Weight",
+  "ADDRESS_INFORMATION": "Address Information",
+  "ITEM": "item",
+  "FB_EMAIL_REQUIRED": "Your facebook id does have public email address. In order to continue login with facebook you need to add email on your facebook id.",
+  "ORDER_CREATED_THANKYOU_MESSAGE": "Thankyou for placing your order",
+  "CONFIRM": "Confirm",
+  "EXIT_MSG": "Do you want to exit?",
+  "EXIT": "Exit",
+  "SEARCH_MORE": "Search More for ",
+  "PAYMENT_LOADING": "Please Wait While we are redirecting to payment gateway.",
+  "ORDER_FAILED": "Order Failed",
+  "REFERRAL_CODE": "Referral code",
+  "HAVE_REFERRAL_CODE": "Have a referral code?",
+  "REFERRAL_CODE_DESC": "Enter a referral cde which you got from your friend. Refferal code is case-sensitive.",
+  "SKIP": "Skip",
+  "ADD_MONEY_TO_WALLET": "Add money to wallet",
+  "AMOUNT": "Amount",
+  "REFER_EARN_DESC": "Invite your friends on {{ storeName }} and get {{amount_referrer}} as wallet credit. Your friend Will also get {{amount_earner}} as wallet credit.",
+  "TOTAL_SALE_SAVING": "You save",
+  "SEE_MORE": "See More",
+  "CALL": "CALL"
 }
