init and splash,login,signup,drawer

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">wooapp</string>
+    <string name="app_name">Schoolmegamart</string>
     <string name="facebook_app_id">297281271110752</string>
 </resources>
