fix thank you page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -161,7 +161,7 @@
   "TOP_SELLERS": "Top Sellers",
   "TRENDING_OFFERS": "Trending Offers",
   "TOP_RATED": "Top Rated",
-  "INFORMATION": "information",
+  "INFORMATION": "Information",
   "PASSWORD_INFO": "leave blank to leave unchanged",
   "DONE": "Done",
   "APPLY_COUPON": "Apply Coupon",
