Fix google analytics, home categoies layout

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -77,7 +77,7 @@
   "ADDRESS_1": "Address Line 1",
   "ADDRESS_2": "Address Line 2",
   "PROFILE_UPDATED": "Profile updated",
-  "SETTING": "Setting",
+  "SETTING": "Settings",
   "ADDRESS": "Address",
   "BILLING": "Billing",
   "SHIPPING": "Shipping",
